# oikos-dashboard

./: Cargo.toml  README.md  build.rs  env-kindle.sample
.github/workflows/: test.yml
example/: script.rhai
kual/oikos/: config.xml  menu.json  start.sh
src/: document.rs  main.rs  opts.rs  rendering.rs  sleep.rs
src/evdev/: mod.rs  sys.rs
src/framebuffer/: mod.rs  sys.rs
src/scripting/: datetime.rs  document.rs  fetch.rs  mod.rs
src/timer/: mod.rs
src/timer/rtc/: mod.rs  sys.rs
