[package]
name = "oikos"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[profile.dev-stripped]
inherits = "dev"
strip = true

[dependencies]
anyhow = "1.0.71"
bitflags = "2.2.1"
bpaf = "0.8.0"
dotenvy = "0.15.7"
elementtree = "1.2.3"
env_logger = "0.10.0"
glob = "0.3.1"
humantime = "2.1.0"
libc = "0.2.144"
log = "0.4.17"
memmap2 = "0.6.1"
nix = { version = "0.26.2", default-features = false, features = ["ioctl", "poll", "time"] }
png = "0.17.8"
rand = "0.8.5"
resvg = "0.32.0"
rhai = "1.14.0"
thiserror = "1.0.40"
tiny-skia = "0.9.0"
tz-rs = "0.6.14"
tzdb = "0.5.7"
ureq = "2.6.2"
usvg = "0.32.0"

[build-dependencies]
bindgen = "0.65.1"
prettyplease = "0.2.5"
quote = "1.0.27"
syn = "2.0.16"
