[package]
name = "oikos"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[profile.dev-stripped]
inherits = "dev"
strip = true

[dependencies]
anyhow = "1.0.71"
bitflags = "2.3.1"
bpaf = "0.8.1"
dotenvy = "0.15.7"
elementtree = "1.2.3"
env_logger = "0.10.0"
glob = "0.3.1"
humantime = "2.1.0"
libc = "0.2.146"
log = "0.4.18"
memmap2 = "0.7.0"
nix = { version = "0.26.2", default-features = false, features = ["ioctl", "poll", "time"] }
png = "0.17.8"
rand = "0.8.5"
resvg = "0.34.1"
rhai = "1.14.0"
thiserror = "1.0.40"
tiny-skia = "0.10.0" # resvg 0.34.1 requires this version to work properly
tz-rs = "0.6.14"
tzdb = "0.5.7"
ureq = "2.6.2"
usvg = "0.34.1"

[build-dependencies]
bindgen = "0.65.1"
prettyplease = "0.2.6"
quote = "1.0.28"
syn = "2.0.18"
