[package]
name = "oikos"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[profile.dev-stripped]
inherits = "dev"
strip = true

[dependencies]
anyhow = "1.0.75"
bitflags = "2.4.0"
bpaf = "0.9.5"
dotenvy = "0.15.7"
elementtree = "1.2.3"
env_logger = "0.10.0"
glob = "0.3.1"
humantime = "2.1.0"
libc = "0.2.147"
log = "0.4.20"
memmap2 = "0.7.1"
nix = { version = "0.26.2", default-features = false, features = ["ioctl", "poll", "time"] }
png = "0.17.10"
rand = "0.8.5"
resvg = "0.35.0"
rhai = "1.15.1"
thiserror = "1.0.48"
tiny-skia = "0.10.0" # resvg v0.35 requires tiny_skia v0.10
tz-rs = "0.6.14"
tzdb = "0.5.7"
ureq = "2.7.1"
usvg = "0.35.0"

[build-dependencies]
bindgen = "0.66.1"
prettyplease = "0.2.14"
quote = "1.0.33"
syn = "2.0.32"
